src/smt/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT

Grammar

Rule 0     S' -> start
Rule 1     empty -> <empty>
Rule 2     start -> tasknet
Rule 3     tasknet -> TASKNET NAME LBRACE tasknet_body_items RBRACE
Rule 4     tasknet_body_items -> tasknet_body_item
Rule 5     tasknet_body_items -> tasknet_body_items tasknet_body_item
Rule 6     tasknet_body_item -> end_decl
Rule 7     tasknet_body_item -> timelines_block
Rule 8     tasknet_body_item -> initial_block
Rule 9     tasknet_body_item -> task_def
Rule 10    tasknet_body_item -> constraints_tl_block
Rule 11    tasknet_body_item -> properties_block
Rule 12    end_decl -> END EQ NUMBER SEMI
Rule 13    timelines_block -> TIMELINES LBRACE timeline_decl_list RBRACE
Rule 14    timeline_decl_list -> empty
Rule 15    timeline_decl_list -> timeline_decl_list timeline_decl
Rule 16    timeline_decl_list -> timeline_decl
Rule 17    timeline_decl -> NAME COLON timeline_kind SEMI
Rule 18    timeline_kind -> STATE LPAREN state_list RPAREN EQ NAME
Rule 19    state_list -> NAME
Rule 20    state_list -> state_list COMMA NAME
Rule 21    timeline_kind -> ATOMIC init_bool_opt
Rule 22    claim_kw -> CLAIM
Rule 23    claim_kw -> CLAIMABLE
Rule 24    cumul_kw -> CUMUL
Rule 25    cumul_kw -> CUMULATIVE
Rule 26    range -> LBRACKET NUMBER COMMA NUMBER RBRACKET
Rule 27    range_opt -> empty
Rule 28    range_opt -> range
Rule 29    bounds_opt -> empty
Rule 30    bounds_opt -> BOUNDS range
Rule 31    init_opt -> empty
Rule 32    init_opt -> EQ NUMBER
Rule 33    init_bool_opt -> empty
Rule 34    init_bool_opt -> EQ TRUE
Rule 35    init_bool_opt -> EQ FALSE
Rule 36    timeline_kind -> claim_kw range_opt init_opt
Rule 37    timeline_kind -> cumul_kw range_opt bounds_opt init_opt
Rule 38    timeline_kind -> RATE range_opt bounds_opt init_opt
Rule 39    initial_block -> INITIAL LBRACE tlcon_list RBRACE
Rule 40    task_def -> TASKDEF NAME LBRACE task_body_items RBRACE
Rule 41    task_def -> optional_opt TASK NAME extends_opt LBRACE task_body_items RBRACE
Rule 42    task_def -> optional_opt TASK NAME extends_opt SEMI
Rule 43    optional_opt -> empty
Rule 44    optional_opt -> OPTIONAL
Rule 45    extends_opt -> empty
Rule 46    extends_opt -> COLON NAME
Rule 47    task_body_items -> empty
Rule 48    task_body_items -> task_body_item
Rule 49    task_body_items -> task_body_items task_body_item
Rule 50    task_body_item -> task_id
Rule 51    task_body_item -> task_priority
Rule 52    task_body_item -> task_start_range
Rule 53    task_body_item -> task_end_range
Rule 54    task_body_item -> task_duration_range
Rule 55    task_body_item -> task_duration
Rule 56    task_body_item -> task_start_opt
Rule 57    task_body_item -> task_after
Rule 58    task_body_item -> task_containedin
Rule 59    task_body_item -> constraints_block
Rule 60    task_body_item -> pre_block
Rule 61    task_body_item -> inv_block
Rule 62    task_body_item -> post_block
Rule 63    task_body_item -> task_impacts
Rule 64    task_id -> ID_KW NUMBER SEMI
Rule 65    task_priority -> PRIORITY NUMBER SEMI
Rule 66    task_start_range -> START_RANGE range SEMI
Rule 67    task_end_range -> END_RANGE range SEMI
Rule 68    task_duration_range -> DURATION_RANGE range SEMI
Rule 69    task_duration -> DURATION NUMBER SEMI
Rule 70    task_start_opt -> START_KW NUMBER SEMI
Rule 71    task_start_opt -> empty
Rule 72    task_after -> AFTER name_list SEMI
Rule 73    task_containedin -> CONTAINEDIN name_list SEMI
Rule 74    name_list -> empty
Rule 75    name_list -> NAME
Rule 76    name_list -> name_list COMMA NAME
Rule 77    constraints_block -> CONSTRAINTS LBRACE constraints_items RBRACE
Rule 78    constraints_items -> constraints_item
Rule 79    constraints_items -> constraints_items constraints_item
Rule 80    constraints_item -> pre_block
Rule 81    constraints_item -> inv_block
Rule 82    constraints_item -> post_block
Rule 83    pre_block -> PRE LBRACE tlcon_list RBRACE
Rule 84    inv_block -> INV LBRACE tlcon_list RBRACE
Rule 85    post_block -> POST LBRACE tlcon_list RBRACE
Rule 86    tlcon_list -> empty
Rule 87    tlcon_list -> tlcon_stmt
Rule 88    tlcon_list -> tlcon_list tlcon_stmt
Rule 89    tlcon_stmt -> NAME EQ value SEMI
Rule 90    tlcon_stmt -> NAME IN con_list SEMI
Rule 91    con_list -> con_item
Rule 92    con_list -> con_list con_item
Rule 93    con_item -> value
Rule 94    con_item -> range
Rule 95    task_impacts -> impacts_block
Rule 96    task_impacts -> empty
Rule 97    impacts_block -> IMPACTS LBRACE impact_group_list RBRACE
Rule 98    impact_group_list -> empty
Rule 99    impact_group_list -> impact_group
Rule 100   impact_group_list -> impact_group_list impact_group
Rule 101   impact_group -> impact_when LBRACE impact_group_entries RBRACE
Rule 102   impact_when -> PRE
Rule 103   impact_when -> MAINT
Rule 104   impact_when -> POST
Rule 105   impact_group_entries -> impact_group_entry
Rule 106   impact_group_entries -> impact_group_entries impact_group_entry
Rule 107   impact_group_entry -> NAME impact_rhs SEMI
Rule 108   impact_rhs -> EQ value
Rule 109   impact_rhs -> PLUS_EQ NUMBER
Rule 110   impact_rhs -> MINUS_EQ NUMBER
Rule 111   impact_rhs -> PLUS_RATE NUMBER
Rule 112   impact_rhs -> MINUS_RATE NUMBER
Rule 113   constraints_tl_block -> CONSTRAINTS LBRACE temporal_prop_list RBRACE
Rule 114   properties_block -> PROPERTIES LBRACE temporal_prop_list RBRACE
Rule 115   temporal_prop_list -> temporal_prop
Rule 116   temporal_prop_list -> temporal_prop_list temporal_prop
Rule 117   temporal_prop -> PROP NAME COLON tl_formula SEMI
Rule 118   tl_formula -> tl_imp
Rule 119   tl_imp -> tl_or
Rule 120   tl_imp -> tl_or IMPLIES tl_imp
Rule 121   tl_or -> tl_and
Rule 122   tl_or -> tl_or OR tl_and
Rule 123   tl_and -> tl_u
Rule 124   tl_and -> tl_and AND tl_u
Rule 125   tl_u -> tl_unary
Rule 126   tl_u -> tl_unary UNTIL tl_unary
Rule 127   tl_u -> tl_unary SINCE tl_unary
Rule 128   tl_unary -> NOT tl_unary
Rule 129   tl_unary -> ALWAYS tl_unary
Rule 130   tl_unary -> EVENTUALLY tl_unary
Rule 131   tl_unary -> SOFAR tl_unary
Rule 132   tl_unary -> ONCE tl_unary
Rule 133   tl_unary -> LPAREN tl_formula RPAREN
Rule 134   tl_unary -> tl_atom
Rule 135   tl_atom -> NAME cmp_op NUMBER
Rule 136   tl_atom -> NAME EQ NAME
Rule 137   tl_atom -> NAME EQ TRUE
Rule 138   tl_atom -> NAME EQ FALSE
Rule 139   tl_atom -> ACTIVE LPAREN NAME RPAREN
Rule 140   cmp_op -> LT
Rule 141   cmp_op -> LE
Rule 142   cmp_op -> EQ
Rule 143   cmp_op -> GE
Rule 144   cmp_op -> GT
Rule 145   value -> STRING
Rule 146   value -> NUMBER
Rule 147   value -> TRUE
Rule 148   value -> FALSE
Rule 149   value -> NAME

Terminals, with rules where they appear

ACTIVE               : 139
AFTER                : 72
ALWAYS               : 129
AND                  : 124
ATOMIC               : 21
BOUNDS               : 30
CLAIM                : 22
CLAIMABLE            : 23
COLON                : 17 46 117
COMMA                : 20 26 76
CONSTRAINTS          : 77 113
CONTAINEDIN          : 73
CUMUL                : 24
CUMULATIVE           : 25
DOT                  : 
DURATION             : 69
DURATION_RANGE       : 68
END                  : 12
END_RANGE            : 67
EQ                   : 12 18 32 34 35 89 108 136 137 138 142
EVENTUALLY           : 130
FALSE                : 35 138 148
GE                   : 143
GT                   : 144
ID_KW                : 64
IMPACTS              : 97
IMPLIES              : 120
IN                   : 90
INITIAL              : 39
INV                  : 84
LBRACE               : 3 13 39 40 41 77 83 84 85 97 101 113 114
LBRACKET             : 26
LE                   : 141
LPAREN               : 18 133 139
LT                   : 140
MAINT                : 103
MINUS_EQ             : 110
MINUS_RATE           : 112
NAME                 : 3 17 18 19 20 40 41 42 46 75 76 89 90 107 117 135 136 136 137 138 139 149
NOT                  : 128
NUMBER               : 12 26 26 32 64 65 69 70 109 110 111 112 135 146
ONCE                 : 132
OPTIONAL             : 44
OR                   : 122
PLUS_EQ              : 109
PLUS_RATE            : 111
POST                 : 85 104
PRE                  : 83 102
PRIORITY             : 65
PROP                 : 117
PROPERTIES           : 114
RATE                 : 38
RBRACE               : 3 13 39 40 41 77 83 84 85 97 101 113 114
RBRACKET             : 26
RPAREN               : 18 133 139
SEMI                 : 12 17 42 64 65 66 67 68 69 70 72 73 89 90 107 117
SINCE                : 127
SOFAR                : 131
START_KW             : 70
START_RANGE          : 66
STATE                : 18
STRING               : 145
TASK                 : 41 42
TASKDEF              : 40
TASKNET              : 3
TIMELINES            : 13
TRUE                 : 34 137 147
UNTIL                : 126
error                : 

Nonterminals, with rules where they appear

bounds_opt           : 37 38
claim_kw             : 36
cmp_op               : 135
con_item             : 91 92
con_list             : 90 92
constraints_block    : 59
constraints_item     : 78 79
constraints_items    : 77 79
constraints_tl_block : 10
cumul_kw             : 37
empty                : 14 27 29 31 33 43 45 47 71 74 86 96 98
end_decl             : 6
extends_opt          : 41 42
impact_group         : 99 100
impact_group_entries : 101 106
impact_group_entry   : 105 106
impact_group_list    : 97 100
impact_rhs           : 107
impact_when          : 101
impacts_block        : 95
init_bool_opt        : 21
init_opt             : 36 37 38
initial_block        : 8
inv_block            : 61 81
name_list            : 72 73 76
optional_opt         : 41 42
post_block           : 62 82
pre_block            : 60 80
properties_block     : 11
range                : 28 30 66 67 68 94
range_opt            : 36 37 38
start                : 0
state_list           : 18 20
task_after           : 57
task_body_item       : 48 49
task_body_items      : 40 41 49
task_containedin     : 58
task_def             : 9
task_duration        : 55
task_duration_range  : 54
task_end_range       : 53
task_id              : 50
task_impacts         : 63
task_priority        : 51
task_start_opt       : 56
task_start_range     : 52
tasknet              : 2
tasknet_body_item    : 4 5
tasknet_body_items   : 3 5
temporal_prop        : 115 116
temporal_prop_list   : 113 114 116
timeline_decl        : 15 16
timeline_decl_list   : 13 15
timeline_kind        : 17
timelines_block      : 7
tl_and               : 121 122 124
tl_atom              : 134
tl_formula           : 117 133
tl_imp               : 118 120
tl_or                : 119 120 122
tl_u                 : 123 124
tl_unary             : 125 126 126 127 127 128 129 130 131 132
tlcon_list           : 39 83 84 85 88
tlcon_stmt           : 87 88
value                : 89 93 108

Parsing method: LALR

state 0

    (0) S' -> . start
    (2) start -> . tasknet
    (3) tasknet -> . TASKNET NAME LBRACE tasknet_body_items RBRACE

    TASKNET         shift and go to state 3

    start                          shift and go to state 1
    tasknet                        shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (2) start -> tasknet .

    $end            reduce using rule 2 (start -> tasknet .)


state 3

    (3) tasknet -> TASKNET . NAME LBRACE tasknet_body_items RBRACE

    NAME            shift and go to state 4


state 4

    (3) tasknet -> TASKNET NAME . LBRACE tasknet_body_items RBRACE

    LBRACE          shift and go to state 5


state 5

    (3) tasknet -> TASKNET NAME LBRACE . tasknet_body_items RBRACE
    (4) tasknet_body_items -> . tasknet_body_item
    (5) tasknet_body_items -> . tasknet_body_items tasknet_body_item
    (6) tasknet_body_item -> . end_decl
    (7) tasknet_body_item -> . timelines_block
    (8) tasknet_body_item -> . initial_block
    (9) tasknet_body_item -> . task_def
    (10) tasknet_body_item -> . constraints_tl_block
    (11) tasknet_body_item -> . properties_block
    (12) end_decl -> . END EQ NUMBER SEMI
    (13) timelines_block -> . TIMELINES LBRACE timeline_decl_list RBRACE
    (39) initial_block -> . INITIAL LBRACE tlcon_list RBRACE
    (40) task_def -> . TASKDEF NAME LBRACE task_body_items RBRACE
    (41) task_def -> . optional_opt TASK NAME extends_opt LBRACE task_body_items RBRACE
    (42) task_def -> . optional_opt TASK NAME extends_opt SEMI
    (113) constraints_tl_block -> . CONSTRAINTS LBRACE temporal_prop_list RBRACE
    (114) properties_block -> . PROPERTIES LBRACE temporal_prop_list RBRACE
    (43) optional_opt -> . empty
    (44) optional_opt -> . OPTIONAL
    (1) empty -> .

    END             shift and go to state 14
    TIMELINES       shift and go to state 15
    INITIAL         shift and go to state 16
    TASKDEF         shift and go to state 17
    CONSTRAINTS     shift and go to state 19
    PROPERTIES      shift and go to state 20
    OPTIONAL        shift and go to state 22
    TASK            reduce using rule 1 (empty -> .)

    tasknet_body_items             shift and go to state 6
    tasknet_body_item              shift and go to state 7
    end_decl                       shift and go to state 8
    timelines_block                shift and go to state 9
    initial_block                  shift and go to state 10
    task_def                       shift and go to state 11
    constraints_tl_block           shift and go to state 12
    properties_block               shift and go to state 13
    optional_opt                   shift and go to state 18
    empty                          shift and go to state 21

state 6

    (3) tasknet -> TASKNET NAME LBRACE tasknet_body_items . RBRACE
    (5) tasknet_body_items -> tasknet_body_items . tasknet_body_item
    (6) tasknet_body_item -> . end_decl
    (7) tasknet_body_item -> . timelines_block
    (8) tasknet_body_item -> . initial_block
    (9) tasknet_body_item -> . task_def
    (10) tasknet_body_item -> . constraints_tl_block
    (11) tasknet_body_item -> . properties_block
    (12) end_decl -> . END EQ NUMBER SEMI
    (13) timelines_block -> . TIMELINES LBRACE timeline_decl_list RBRACE
    (39) initial_block -> . INITIAL LBRACE tlcon_list RBRACE
    (40) task_def -> . TASKDEF NAME LBRACE task_body_items RBRACE
    (41) task_def -> . optional_opt TASK NAME extends_opt LBRACE task_body_items RBRACE
    (42) task_def -> . optional_opt TASK NAME extends_opt SEMI
    (113) constraints_tl_block -> . CONSTRAINTS LBRACE temporal_prop_list RBRACE
    (114) properties_block -> . PROPERTIES LBRACE temporal_prop_list RBRACE
    (43) optional_opt -> . empty
    (44) optional_opt -> . OPTIONAL
    (1) empty -> .

    RBRACE          shift and go to state 23
    END             shift and go to state 14
    TIMELINES       shift and go to state 15
    INITIAL         shift and go to state 16
    TASKDEF         shift and go to state 17
    CONSTRAINTS     shift and go to state 19
    PROPERTIES      shift and go to state 20
    OPTIONAL        shift and go to state 22
    TASK            reduce using rule 1 (empty -> .)

    tasknet_body_item              shift and go to state 24
    end_decl                       shift and go to state 8
    timelines_block                shift and go to state 9
    initial_block                  shift and go to state 10
    task_def                       shift and go to state 11
    constraints_tl_block           shift and go to state 12
    properties_block               shift and go to state 13
    optional_opt                   shift and go to state 18
    empty                          shift and go to state 21

state 7

    (4) tasknet_body_items -> tasknet_body_item .

    RBRACE          reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)
    END             reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)
    TIMELINES       reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)
    INITIAL         reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)
    TASKDEF         reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)
    CONSTRAINTS     reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)
    PROPERTIES      reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)
    OPTIONAL        reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)
    TASK            reduce using rule 4 (tasknet_body_items -> tasknet_body_item .)


state 8

    (6) tasknet_body_item -> end_decl .

    RBRACE          reduce using rule 6 (tasknet_body_item -> end_decl .)
    END             reduce using rule 6 (tasknet_body_item -> end_decl .)
    TIMELINES       reduce using rule 6 (tasknet_body_item -> end_decl .)
    INITIAL         reduce using rule 6 (tasknet_body_item -> end_decl .)
    TASKDEF         reduce using rule 6 (tasknet_body_item -> end_decl .)
    CONSTRAINTS     reduce using rule 6 (tasknet_body_item -> end_decl .)
    PROPERTIES      reduce using rule 6 (tasknet_body_item -> end_decl .)
    OPTIONAL        reduce using rule 6 (tasknet_body_item -> end_decl .)
    TASK            reduce using rule 6 (tasknet_body_item -> end_decl .)


state 9

    (7) tasknet_body_item -> timelines_block .

    RBRACE          reduce using rule 7 (tasknet_body_item -> timelines_block .)
    END             reduce using rule 7 (tasknet_body_item -> timelines_block .)
    TIMELINES       reduce using rule 7 (tasknet_body_item -> timelines_block .)
    INITIAL         reduce using rule 7 (tasknet_body_item -> timelines_block .)
    TASKDEF         reduce using rule 7 (tasknet_body_item -> timelines_block .)
    CONSTRAINTS     reduce using rule 7 (tasknet_body_item -> timelines_block .)
    PROPERTIES      reduce using rule 7 (tasknet_body_item -> timelines_block .)
    OPTIONAL        reduce using rule 7 (tasknet_body_item -> timelines_block .)
    TASK            reduce using rule 7 (tasknet_body_item -> timelines_block .)


state 10

    (8) tasknet_body_item -> initial_block .

    RBRACE          reduce using rule 8 (tasknet_body_item -> initial_block .)
    END             reduce using rule 8 (tasknet_body_item -> initial_block .)
    TIMELINES       reduce using rule 8 (tasknet_body_item -> initial_block .)
    INITIAL         reduce using rule 8 (tasknet_body_item -> initial_block .)
    TASKDEF         reduce using rule 8 (tasknet_body_item -> initial_block .)
    CONSTRAINTS     reduce using rule 8 (tasknet_body_item -> initial_block .)
    PROPERTIES      reduce using rule 8 (tasknet_body_item -> initial_block .)
    OPTIONAL        reduce using rule 8 (tasknet_body_item -> initial_block .)
    TASK            reduce using rule 8 (tasknet_body_item -> initial_block .)


state 11

    (9) tasknet_body_item -> task_def .

    RBRACE          reduce using rule 9 (tasknet_body_item -> task_def .)
    END             reduce using rule 9 (tasknet_body_item -> task_def .)
    TIMELINES       reduce using rule 9 (tasknet_body_item -> task_def .)
    INITIAL         reduce using rule 9 (tasknet_body_item -> task_def .)
    TASKDEF         reduce using rule 9 (tasknet_body_item -> task_def .)
    CONSTRAINTS     reduce using rule 9 (tasknet_body_item -> task_def .)
    PROPERTIES      reduce using rule 9 (tasknet_body_item -> task_def .)
    OPTIONAL        reduce using rule 9 (tasknet_body_item -> task_def .)
    TASK            reduce using rule 9 (tasknet_body_item -> task_def .)


state 12

    (10) tasknet_body_item -> constraints_tl_block .

    RBRACE          reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)
    END             reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)
    TIMELINES       reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)
    INITIAL         reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)
    TASKDEF         reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)
    CONSTRAINTS     reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)
    PROPERTIES      reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)
    OPTIONAL        reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)
    TASK            reduce using rule 10 (tasknet_body_item -> constraints_tl_block .)


state 13

    (11) tasknet_body_item -> properties_block .

    RBRACE          reduce using rule 11 (tasknet_body_item -> properties_block .)
    END             reduce using rule 11 (tasknet_body_item -> properties_block .)
    TIMELINES       reduce using rule 11 (tasknet_body_item -> properties_block .)
    INITIAL         reduce using rule 11 (tasknet_body_item -> properties_block .)
    TASKDEF         reduce using rule 11 (tasknet_body_item -> properties_block .)
    CONSTRAINTS     reduce using rule 11 (tasknet_body_item -> properties_block .)
    PROPERTIES      reduce using rule 11 (tasknet_body_item -> properties_block .)
    OPTIONAL        reduce using rule 11 (tasknet_body_item -> properties_block .)
    TASK            reduce using rule 11 (tasknet_body_item -> properties_block .)


state 14

    (12) end_decl -> END . EQ NUMBER SEMI

    EQ              shift and go to state 25


state 15

    (13) timelines_block -> TIMELINES . LBRACE timeline_decl_list RBRACE

    LBRACE          shift and go to state 26


state 16

    (39) initial_block -> INITIAL . LBRACE tlcon_list RBRACE

    LBRACE          shift and go to state 27


state 17

    (40) task_def -> TASKDEF . NAME LBRACE task_body_items RBRACE

    NAME            shift and go to state 28


state 18

    (41) task_def -> optional_opt . TASK NAME extends_opt LBRACE task_body_items RBRACE
    (42) task_def -> optional_opt . TASK NAME extends_opt SEMI

    TASK            shift and go to state 29


state 19

    (113) constraints_tl_block -> CONSTRAINTS . LBRACE temporal_prop_list RBRACE

    LBRACE          shift and go to state 30


state 20

    (114) properties_block -> PROPERTIES . LBRACE temporal_prop_list RBRACE

    LBRACE          shift and go to state 31


state 21

    (43) optional_opt -> empty .

    TASK            reduce using rule 43 (optional_opt -> empty .)


state 22

    (44) optional_opt -> OPTIONAL .

    TASK            reduce using rule 44 (optional_opt -> OPTIONAL .)


state 23

    (3) tasknet -> TASKNET NAME LBRACE tasknet_body_items RBRACE .

    $end            reduce using rule 3 (tasknet -> TASKNET NAME LBRACE tasknet_body_items RBRACE .)


state 24

    (5) tasknet_body_items -> tasknet_body_items tasknet_body_item .

    RBRACE          reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)
    END             reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)
    TIMELINES       reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)
    INITIAL         reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)
    TASKDEF         reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)
    CONSTRAINTS     reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)
    PROPERTIES      reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)
    OPTIONAL        reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)
    TASK            reduce using rule 5 (tasknet_body_items -> tasknet_body_items tasknet_body_item .)


state 25

    (12) end_decl -> END EQ . NUMBER SEMI

    NUMBER          shift and go to state 32


state 26

    (13) timelines_block -> TIMELINES LBRACE . timeline_decl_list RBRACE
    (14) timeline_decl_list -> . empty
    (15) timeline_decl_list -> . timeline_decl_list timeline_decl
    (16) timeline_decl_list -> . timeline_decl
    (1) empty -> .
    (17) timeline_decl -> . NAME COLON timeline_kind SEMI

  ! shift/reduce conflict for NAME resolved as shift
    RBRACE          reduce using rule 1 (empty -> .)
    NAME            shift and go to state 36

  ! NAME            [ reduce using rule 1 (empty -> .) ]

    timeline_decl_list             shift and go to state 33
    empty                          shift and go to state 34
    timeline_decl                  shift and go to state 35

state 27

    (39) initial_block -> INITIAL LBRACE . tlcon_list RBRACE
    (86) tlcon_list -> . empty
    (87) tlcon_list -> . tlcon_stmt
    (88) tlcon_list -> . tlcon_list tlcon_stmt
    (1) empty -> .
    (89) tlcon_stmt -> . NAME EQ value SEMI
    (90) tlcon_stmt -> . NAME IN con_list SEMI

  ! shift/reduce conflict for NAME resolved as shift
    RBRACE          reduce using rule 1 (empty -> .)
    NAME            shift and go to state 40

  ! NAME            [ reduce using rule 1 (empty -> .) ]

    tlcon_list                     shift and go to state 37
    empty                          shift and go to state 38
    tlcon_stmt                     shift and go to state 39

state 28

    (40) task_def -> TASKDEF NAME . LBRACE task_body_items RBRACE

    LBRACE          shift and go to state 41


state 29

    (41) task_def -> optional_opt TASK . NAME extends_opt LBRACE task_body_items RBRACE
    (42) task_def -> optional_opt TASK . NAME extends_opt SEMI

    NAME            shift and go to state 42


state 30

    (113) constraints_tl_block -> CONSTRAINTS LBRACE . temporal_prop_list RBRACE
    (115) temporal_prop_list -> . temporal_prop
    (116) temporal_prop_list -> . temporal_prop_list temporal_prop
    (117) temporal_prop -> . PROP NAME COLON tl_formula SEMI

    PROP            shift and go to state 45

    temporal_prop_list             shift and go to state 43
    temporal_prop                  shift and go to state 44

state 31

    (114) properties_block -> PROPERTIES LBRACE . temporal_prop_list RBRACE
    (115) temporal_prop_list -> . temporal_prop
    (116) temporal_prop_list -> . temporal_prop_list temporal_prop
    (117) temporal_prop -> . PROP NAME COLON tl_formula SEMI

    PROP            shift and go to state 45

    temporal_prop_list             shift and go to state 46
    temporal_prop                  shift and go to state 44

state 32

    (12) end_decl -> END EQ NUMBER . SEMI

    SEMI            shift and go to state 47


state 33

    (13) timelines_block -> TIMELINES LBRACE timeline_decl_list . RBRACE
    (15) timeline_decl_list -> timeline_decl_list . timeline_decl
    (17) timeline_decl -> . NAME COLON timeline_kind SEMI

    RBRACE          shift and go to state 48
    NAME            shift and go to state 36

    timeline_decl                  shift and go to state 49

state 34

    (14) timeline_decl_list -> empty .

    RBRACE          reduce using rule 14 (timeline_decl_list -> empty .)
    NAME            reduce using rule 14 (timeline_decl_list -> empty .)


state 35

    (16) timeline_decl_list -> timeline_decl .

    RBRACE          reduce using rule 16 (timeline_decl_list -> timeline_decl .)
    NAME            reduce using rule 16 (timeline_decl_list -> timeline_decl .)


state 36

    (17) timeline_decl -> NAME . COLON timeline_kind SEMI

    COLON           shift and go to state 50


state 37

    (39) initial_block -> INITIAL LBRACE tlcon_list . RBRACE
    (88) tlcon_list -> tlcon_list . tlcon_stmt
    (89) tlcon_stmt -> . NAME EQ value SEMI
    (90) tlcon_stmt -> . NAME IN con_list SEMI

    RBRACE          shift and go to state 51
    NAME            shift and go to state 40

    tlcon_stmt                     shift and go to state 52

state 38

    (86) tlcon_list -> empty .

    RBRACE          reduce using rule 86 (tlcon_list -> empty .)
    NAME            reduce using rule 86 (tlcon_list -> empty .)


state 39

    (87) tlcon_list -> tlcon_stmt .

    RBRACE          reduce using rule 87 (tlcon_list -> tlcon_stmt .)
    NAME            reduce using rule 87 (tlcon_list -> tlcon_stmt .)


state 40

    (89) tlcon_stmt -> NAME . EQ value SEMI
    (90) tlcon_stmt -> NAME . IN con_list SEMI

    EQ              shift and go to state 53
    IN              shift and go to state 54


state 41

    (40) task_def -> TASKDEF NAME LBRACE . task_body_items RBRACE
    (47) task_body_items -> . empty
    (48) task_body_items -> . task_body_item
    (49) task_body_items -> . task_body_items task_body_item
    (1) empty -> .
    (50) task_body_item -> . task_id
    (51) task_body_item -> . task_priority
    (52) task_body_item -> . task_start_range
    (53) task_body_item -> . task_end_range
    (54) task_body_item -> . task_duration_range
    (55) task_body_item -> . task_duration
    (56) task_body_item -> . task_start_opt
    (57) task_body_item -> . task_after
    (58) task_body_item -> . task_containedin
    (59) task_body_item -> . constraints_block
    (60) task_body_item -> . pre_block
    (61) task_body_item -> . inv_block
    (62) task_body_item -> . post_block
    (63) task_body_item -> . task_impacts
    (64) task_id -> . ID_KW NUMBER SEMI
    (65) task_priority -> . PRIORITY NUMBER SEMI
    (66) task_start_range -> . START_RANGE range SEMI
    (67) task_end_range -> . END_RANGE range SEMI
    (68) task_duration_range -> . DURATION_RANGE range SEMI
    (69) task_duration -> . DURATION NUMBER SEMI
    (70) task_start_opt -> . START_KW NUMBER SEMI
    (71) task_start_opt -> . empty
    (72) task_after -> . AFTER name_list SEMI
    (73) task_containedin -> . CONTAINEDIN name_list SEMI
    (77) constraints_block -> . CONSTRAINTS LBRACE constraints_items RBRACE
    (83) pre_block -> . PRE LBRACE tlcon_list RBRACE
    (84) inv_block -> . INV LBRACE tlcon_list RBRACE
    (85) post_block -> . POST LBRACE tlcon_list RBRACE
    (95) task_impacts -> . impacts_block
    (96) task_impacts -> . empty
    (97) impacts_block -> . IMPACTS LBRACE impact_group_list RBRACE

  ! shift/reduce conflict for ID_KW resolved as shift
  ! shift/reduce conflict for PRIORITY resolved as shift
  ! shift/reduce conflict for START_RANGE resolved as shift
  ! shift/reduce conflict for END_RANGE resolved as shift
  ! shift/reduce conflict for DURATION_RANGE resolved as shift
  ! shift/reduce conflict for DURATION resolved as shift
  ! shift/reduce conflict for START_KW resolved as shift
  ! shift/reduce conflict for AFTER resolved as shift
  ! shift/reduce conflict for CONTAINEDIN resolved as shift
  ! shift/reduce conflict for CONSTRAINTS resolved as shift
  ! shift/reduce conflict for PRE resolved as shift
  ! shift/reduce conflict for INV resolved as shift
  ! shift/reduce conflict for POST resolved as shift
  ! shift/reduce conflict for IMPACTS resolved as shift
    RBRACE          reduce using rule 1 (empty -> .)
    ID_KW           shift and go to state 72
    PRIORITY        shift and go to state 73
    START_RANGE     shift and go to state 74
    END_RANGE       shift and go to state 75
    DURATION_RANGE  shift and go to state 76
    DURATION        shift and go to state 77
    START_KW        shift and go to state 78
    AFTER           shift and go to state 79
    CONTAINEDIN     shift and go to state 80
    CONSTRAINTS     shift and go to state 81
    PRE             shift and go to state 82
    INV             shift and go to state 83
    POST            shift and go to state 84
    IMPACTS         shift and go to state 86

  ! ID_KW           [ reduce using rule 1 (empty -> .) ]
  ! PRIORITY        [ reduce using rule 1 (empty -> .) ]
  ! START_RANGE     [ reduce using rule 1 (empty -> .) ]
  ! END_RANGE       [ reduce using rule 1 (empty -> .) ]
  ! DURATION_RANGE  [ reduce using rule 1 (empty -> .) ]
  ! DURATION        [ reduce using rule 1 (empty -> .) ]
  ! START_KW        [ reduce using rule 1 (empty -> .) ]
  ! AFTER           [ reduce using rule 1 (empty -> .) ]
  ! CONTAINEDIN     [ reduce using rule 1 (empty -> .) ]
  ! CONSTRAINTS     [ reduce using rule 1 (empty -> .) ]
  ! PRE             [ reduce using rule 1 (empty -> .) ]
  ! INV             [ reduce using rule 1 (empty -> .) ]
  ! POST            [ reduce using rule 1 (empty -> .) ]
  ! IMPACTS         [ reduce using rule 1 (empty -> .) ]

    task_body_items                shift and go to state 55
    empty                          shift and go to state 56
    task_body_item                 shift and go to state 57
    task_id                        shift and go to state 58
    task_priority                  shift and go to state 59
    task_start_range               shift and go to state 60
    task_end_range                 shift and go to state 61
    task_duration_range            shift and go to state 62
    task_duration                  shift and go to state 63
    task_start_opt                 shift and go to state 64
    task_after                     shift and go to state 65
    task_containedin               shift and go to state 66
    constraints_block              shift and go to state 67
    pre_block                      shift and go to state 68
    inv_block                      shift and go to state 69
    post_block                     shift and go to state 70
    task_impacts                   shift and go to state 71
    impacts_block                  shift and go to state 85

state 42
